--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -131,8 +131,8 @@
                   </div>
                   <div class="col-md-6">
                      <h1 class="about_taital">¿Quiénes somos?</h1>
-                     <!--<p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised </p>-->
-                     {%block contenido%} {%endblock%}
+                     <p class="about_text">Somos una editorial de moda que conecta inspiración y estilo: explora nuestras revistas y haz tuyos los productos que te enamoran. </p>
+                     <!--{%block contenido%} {%endblock%}-->
                      <div class="readmore_bt"><a href="#">Más información</a></div>
                   </div>
                </div>
@@ -160,7 +160,7 @@
                                  <div class="image_3">
                                     <img src="{{ revista.imagen.url }}" alt="{{ revista.titulo }}">
                                  </div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
+                                 <div class="buy_bt"><a href="{% url 'detalleRevista' revista.id %}">Explorar</a></div>
                               </div>
                            </div>
                            {% endfor %}
