--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -209,29 +209,29 @@
          <div class="container">
             <div class="footer_location_text">
                <ul>
-                  <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">Loram Ipusm hosting web</a></span></li>
-                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Call : +7586656566</a></span></li>
-                  <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
+                  <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">UDVogue</a></span></li>
+                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Tfno.: +944 54 78 32</a></span></li>
+                  <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">udvogue@gmail.com</a></span></li>
                </ul>
             </div>
             <div class="row">
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Useful link </h2>
+                  <h2 class="useful_text">Links</h2>
                   <div class="footer_menu">
                      <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="design.html">Our Designe</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#about">¿Quiénes somos?</a></li>
+                        <li><a href="#revistas">Revistas</a></li>
+                        <li><a href="#contact">¡Contáctanos!</a></li>
                      </ul>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Repair</h2>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur  adipiscinaliqua  Loreadipiscing </p>
+                  <h2 class="useful_text">Nuestras revistas</h2>
+                  <p class="lorem_text">Descubre una inmensidad de productos de todo el mundo</p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Social Media</h2>
+                  <h2 class="useful_text">Redes sociales</h2>
                   <div id="social">
                      <a class="facebookBtn smGlobalBtn active" href="#" ></a>
                      <a class="twitterBtn smGlobalBtn" href="#" ></a>
@@ -240,8 +240,8 @@
                   </div>
                </div>
                <div class="col-sm-6 col-lg-3">
-                  <h1 class="useful_text">Our Repair center</h1>
-                  <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
+                  <h1 class="useful_text">Próximamente</h1>
+                  <p class="footer_text">En 2025 sacamos revistas en EEUU, Alemania, Argentina, Mexico y Corea</p>
                </div>
             </div>
          </div>
