cambios en el estilo

--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -889,7 +889,7 @@ input.email_text::placeholder {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #4f4e4e;
+    color: #878585;
     margin: 0px;
     padding-top: 10px;
 }
