--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -311,6 +311,9 @@
             </div>
          </div>
       </div>
+      <!-- footer section end -->
+
+      
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
@@ -333,6 +336,7 @@
       <script src="{% static 'js/owl.carousel.js' %}"></script>
       <script src="{% static 'js/uery.fancybox.min.js' %}"></script>
 
+      <!--Codigo que baja hasta el punto deseado moviendo la pantalla-->
       <script>
          document.querySelectorAll('a.nav-link').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
