--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -159,7 +159,7 @@
                                  <div class="image_3">
                                     <img src="{{ revista.imagen.url }}" alt="{{ revista.titulo }}">
                                  </div>
-                                 <div class="buy_bt"><a href="{% url 'detalleRevista' revista.id %}">Explorar</a></div>
+                                 <div class="buy_bt"><a href="{% url 'productosPorRevista' revista.id %}">Explorar</a></div>
                               </div>
                            </div>
                            {% endfor %}
@@ -231,6 +231,7 @@
          </div>
       </div>
 
+      <!-- Codigo que mira el funcionamiento del formulario -->
       <script>
          document.addEventListener("DOMContentLoaded", function () {
             const contactForm = document.getElementById('contactForm');
@@ -313,7 +314,7 @@
       </div>
       <!-- footer section end -->
 
-      
+
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
