--- a/UDVogue/UDVogueApp/templates/detalleProductos.html
+++ b/UDVogue/UDVogueApp/templates/detalleProductos.html
@@ -7,17 +7,239 @@
     <h1>Productos de {{ revista.titulo }}</h1>
     <p>Revista publicada el {{ revista.fechaPublicacion }} por {{ revista.editorial.nombre }}</p>
     
-    <div class="productos">
-        {% for producto in productos %}
-        <div class="producto">
-            <h2>{{ producto.nombreProducto }}</h2>
-            <img src="{{ producto.imagen.url }}" alt="{{ producto.nombreProducto }}">
-            <p>Talla: {{ producto.talla }}</p>
-            <p>Precio: ${{ producto.precio }}</p>
-        </div>
-        {% empty %}
-        <p>No hay productos disponibles para esta revista.</p>
-        {% endfor %}
-    </div>
+    
 </body>
+</html>
+
+
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <!-- basic -->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <!-- mobile metas -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <!-- site metas -->
+      <title>UDVogue</title>
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <!-- bootstrap css -->
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+      <!-- style css -->
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <!-- Responsive-->
+      <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+      <!-- fevicon -->
+      <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
+      <!-- Scrollbar Custom CSS -->
+      <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
+      <!-- Tweaks for older IEs-->
+      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      <!-- owl stylesheets --> 
+      <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}" media="screen">
+   </head>
+   <body>
+      <!-- header section start -->
+      <div class="header_section">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+               <a class="logo" href="index.html"><img src="{% static 'images/UDVogueLogo.png' %}"></a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="shop.html">Tienda</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#revistas">Revistas</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#about">Conócenos</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#contact">¡Contáctanos!</a>
+                     </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                     <div class="search_icon">
+                        <ul>
+                           <li><a href="#"><img src="{% static 'images/search-icon.png' %}"></a></li>
+                           <li><a href="#"><img src="{% static 'images/user-icon.png' %}"></a></li>
+                        </ul>
+                     </div>
+                  </form>
+               </div>
+         </nav>
+         </div>
+      </div>
+      <!-- header section end -->
+
+
+      <!-- banner section start -->
+      <div class="banner_section layout_padding">
+         <div id="main_slider" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+               <div class="carousel-item active">
+                  <div class="container">
+                     <div class="row">
+                        <div class="col-md-6">
+                           <h1 class="banner_taital">Elegancia <br> en cada <br>detalle</h1>
+                           <p class="banner_text"> Descubre prendas únicas y accesorios exclusivos donde cada detalle respira elegancia y sofisticación. ¡Tu estilo merece lo mejor! </p>
+                           <div class="btn_main">
+                              <div class="contact_bt"><a href="#">¡Contáctanos!</a></div>
+                           </div>
+                        </div>
+                        <div class="col-md-6">
+                           <div id="portada1"><img src="{% static 'images/Portada1.png' %}"></div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="container">
+                     <div class="row">
+                        <div class="col-md-6">
+                           <h1 class="banner_taital">Sencillez <br> con gran <br>estilo</h1>
+                           <p class="banner_text">Descubre la magia de lo simple con prendas casuales que combinan comodidad y distinción. ¡Un look que habla por ti!</p>
+                           <div class="btn_main">
+                              <div class="contact_bt"><a href="#">¡Contáctanos!</a></div>
+                           </div>
+                        </div>
+                        <div class="col-md-6">
+                           <div id="portada2"><img src="{% static 'images/Portada2.png' %}"></div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+            <i style="font-style: initial;"><<</i>
+            </a>
+            <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+            <i style="font-style: initial;">>></i>
+            </a>
+         </div>
+      </div>
+      <!-- banner section end -->
+
+
+      <!--  design section start -->
+      <div class="design_section layout_padding">
+        <div id="my_slider" class="carousel slide" data-ride="carousel">
+            <div class="productos">
+                {% for producto in productos %}
+                <div class="producto">
+                    <h2>{{ producto.nombreProducto }}</h2>
+                    <img src="{{ producto.imagen.url }}" alt="{{ producto.nombreProducto }}">
+                    <p>Talla: {{ producto.talla }}</p>
+                    <p>Precio: ${{ producto.precio }}</p>
+                </div>
+                {% empty %}
+                <p>No hay productos disponibles para esta revista.</p>
+                {% endfor %}
+            </div>
+            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
+               <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
+            </a>
+            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
+               <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
+            </a>
+         </div>
+         <div class="extraContainer"></div>
+      </div>
+      <!--  design section end -->
+
+      
+      <!-- footer section start -->
+      <div class="footer_section">
+         <div class="container">
+            <div class="footer_location_text">
+               <ul>
+                  <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">UDVogue</a></span></li>
+                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Tfno.: +944 54 78 32</a></span></li>
+                  <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">udvogue@gmail.com</a></span></li>
+               </ul>
+            </div>
+            <div class="row">
+               <div class="col-lg-3 col-sm-6">
+                  <h2 class="useful_text">Links</h2>
+                  <div class="footer_menu">
+                     <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#about">¿Quiénes somos?</a></li>
+                        <li><a href="#revistas">Revistas</a></li>
+                        <li><a href="#contact">¡Contáctanos!</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-lg-3 col-sm-6">
+                  <h2 class="useful_text">Nuestras revistas</h2>
+                  <p class="lorem_text">Descubre una inmensidad de productos de todo el mundo</p>
+               </div>
+               <div class="col-lg-3 col-sm-6">
+                  <h2 class="useful_text">Redes sociales</h2>
+                  <div id="social">
+                     <a class="facebookBtn smGlobalBtn active" href="#" ></a>
+                     <a class="twitterBtn smGlobalBtn" href="#" ></a>
+                     <a class="googleplusBtn smGlobalBtn" href="#" ></a>
+                     <a class="linkedinBtn smGlobalBtn" href="#" ></a>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-lg-3">
+                  <h1 class="useful_text">Próximamente</h1>
+                  <p class="footer_text">En 2025 sacamos revistas en EEUU, Alemania, Argentina, Mexico y Corea</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- footer section end -->
+
+
+      <!-- copyright section start -->
+      <div class="copyright_section">
+         <div class="container">
+            <p class="copyright_text">©UDVogue 2024. Todos los derechos reservados.</p>
+         </div>
+      </div>
+      <!-- copyright section end -->
+
+
+      <!-- Javascript files-->
+      <script src="{% static 'js/jquery.min.js' %}"></script>
+      <script src="{% static 'js/popper.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
+      <script src="{% static 'js/plugin.js' %}"></script>
+      <!-- sidebar -->
+      <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+      <script src="{% static 'js/custom.js' %}"></script>
+      <!-- javascript --> 
+      <script src="{% static 'js/owl.carousel.js' %}"></script>
+      <script src="{% static 'js/uery.fancybox.min.js' %}"></script>
+
+      <!--Codigo que baja hasta el punto deseado moviendo la pantalla-->
+      <script>
+         document.querySelectorAll('a.nav-link').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+               e.preventDefault();
+               const target = document.querySelector(this.getAttribute('href'));
+               if (target) {
+                  target.scrollIntoView({ behavior: 'smooth' });
+               }
+            });
+         });
+      </script>
+   </body>
 </html>
