--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -375,8 +375,8 @@ button {
 }
 
 #portada2 {
-    width: auto;
-    height: 11%;
+    width: 50%;
+    height: auto;
     float: left;
 }
 /* banner section end */
