--- a/UDVogue/UDVogueApp/templates/detalleProductos.html
+++ b/UDVogue/UDVogueApp/templates/detalleProductos.html
@@ -84,7 +84,7 @@
                            <h1 class="banner_taital">{{ revista.titulo }}</h1>
                         </div>
                         <div class="col-md-6">
-                           <div id="portada1"><img src="{% static 'images/Portada1.png' %}"></div>
+                           <div id="portada2"><img src="{{ revista.imagen.url }}" alt="{{ revista.titulo }}"></div>
                         </div>
                      </div>
                   </div>
