--- a/UDVogue/UDVogueApp/templates/detalleProductos.html
+++ b/UDVogue/UDVogueApp/templates/detalleProductos.html
@@ -81,7 +81,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">{{ revista.titulo }}</h1>
+                           <h1 class="banner_taital">UDVogue <br> {{ revista.titulo }}</h1>
                         </div>
                         <div class="col-md-6">
                            <div id="portada2"><img src="{{ revista.imagen.url }}" alt="{{ revista.titulo }}"></div>
@@ -97,42 +97,26 @@
 
       <!--  design section start -->
       <div class="design_section layout_padding">
-        <div id="my_slider" class="carousel slide" data-ride="carousel">
-           <div id="revistas" class="carousel-inner">
-            {% for grupo in gruposProductos %}
-              <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                 <div class="container" id="Revistas">
-                    <h1 class="design_taital">Nuestras revistas</h1>
-                    <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
-                    <div class="design_section_2">
-                       <div class="row">
-                        {% for producto in grupo %}
-                          <div class="col-md-4">
-                             <div class="box_main">
-                                <p class="chair_text">{{ producto.nombreProducto }}</p>
-                                <div class="image_3">
-                                   <img src="{{ producto.imagen.url }}" alt="{{ producto.id }}">
-                                   <p>Precio: {{ producto.precio }}€</p>
-                                   <p>Talla: {{ producto.talla }}</p>
-                                </div>
+         <div class="container">
+             <div class="row">
+                 {% for producto in productos %}
+                     <div class="col-md-4">
+                         <div class="box_main">
+                             <p class="chair_text">{{ producto.nombreProducto }}</p>
+                             <div class="image_3">
+                                 <img src="{{ producto.imagen.url }}" alt="{{ producto.nombreProducto }}">
                              </div>
-                          </div>
-                          {% endfor %}
-                       </div>
-                    </div>
-                 </div>
-              </div>
-              {% endfor %}
-           </div>
-           <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-              <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
-           </a>
-           <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-              <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
-           </a>
-        </div>
-        <div class="extraContainer"></div>
-     </div>
+                             <p>Precio: {{ producto.precio }} EUR</p>
+                             <p>Talla: {{ producto.talla }}</p>
+                             <div class="buy_bt"><a href="{% url 'detalleProducto' producto.id %}">Ver Detalles</a></div>
+                         </div>
+                     </div>
+                 {% empty %}
+                     <p>No hay productos disponibles en esta revista.</p>
+                 {% endfor %}
+             </div>
+         </div>
+     </div>   
       <!--  design section end -->
 
       
