--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -36,15 +36,12 @@
       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-               <a class="logo" href="index.html"><img src="{% static 'images/UDVogueLogo.png' %}"></a>
+               <a class="logo" href="{% url 'index' %}"><img src="{% static 'images/UDVogueLogo.png' %}"></a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                     </li>
                      <li class="nav-item">
                         <a class="nav-link" href="shop.html">Tienda</a>
                      </li>
@@ -58,14 +55,6 @@
                         <a class="nav-link" href="#contact">¡Contáctanos!</a>
                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                     <div class="search_icon">
-                        <ul>
-                           <li><a href="#"><img src="{% static 'images/search-icon.png' %}"></a></li>
-                           <li><a href="#"><img src="{% static 'images/user-icon.png' %}"></a></li>
-                        </ul>
-                     </div>
-                  </form>
                </div>
          </nav>
          </div>
